--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -4,10 +4,10 @@
 <div id="blog_description"><h2><%=h @blog.description %></h2></div>
 <% end -%>
 
-
+<% if logged_in? && @blog.users.include?(logged_in_user) -%>
 <%= link_to 'Edit', edit_blog_path(@blog) %> |
-<%= link_to 'Back', blogs_path %>
 <%= link_to 'Create Post', new_post_path(:blog => @blog) %>
+<% end -%>
 
 <%= render :partial => "post", :collection => @blog.published_posts %>
 
