--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,18 +3,15 @@
 <table>
   <tr>
     <th>Title</th>
-    <th>Body</th>
     <th>Blog</th>
     <th>Published at</th>
   </tr>
 
 <% for post in @posts %>
   <tr>
-    <td><%=h post.title %></td>
-    <td><%=h post.body %></td>
-    <td><%=h post.blog_id %></td>
-    <td><%=h post.published_at %></td>
-    <td><%= link_to 'Show', post %></td>
+    <td><%= link_to post.title, post %></td>
+    <td><%= link_to post.blog.name, post.blog %></td>
+    <td><%=h post.published_at.strftime("%Y-%m-%d") %></td>
     <td><%= link_to 'Edit', edit_post_path(post) %></td>
     <td><%= link_to 'Destroy', post, :confirm => 'Are you sure?', :method => :delete %></td>
   </tr>
