cleaned up the posts/index view

--- a/app/views/layouts/blogs.html.erb
+++ b/app/views/layouts/blogs.html.erb
@@ -11,7 +11,7 @@
   <%= javascript_include_tag "syntax_highlighter/shBrushCss.js" %>
   <%= javascript_include_tag "syntax_highlighter/shBrushJScript.js" %>
   <%= javascript_include_tag "syntax_highlighter/shBrushJava.js" %>
-  
+  <link rel="shortcut icon" href="/favicon.ico">
   <style>
     #header {
       background-image: url(/images/ruby_on_white_500x66.jpg);
