--- a/app/views/layouts/blogs.html.erb
+++ b/app/views/layouts/blogs.html.erb
@@ -31,6 +31,8 @@
 <%= yield :header %>
 </div> <!-- header -->
 <div id="mainbar">
+<%= render :partial => "shared/flash_messages" %>
+
 <%= yield %>
 </div><!-- mainbar -->
 </div><!-- content -->
