introduced the 'default blog' concept. the default blog is shown in the root route

--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -9,5 +9,5 @@
 <%= link_to 'Create Post', new_post_path(:blog => @blog) %>
 <% end -%>
 
-<%= render :partial => "post", :collection => @blog.published_posts %>
+<%= render :partial => "blogs/post", :collection => @blog.published_posts %>
 
