pagination of blog posts in place

--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -9,5 +9,7 @@
 <%= link_to 'Create Post', new_post_path(:blog => @blog) %>
 <% end -%>
 
-<%= render :partial => "blogs/post", :collection => @blog.published_posts %>
+<%= render :partial => "blogs/post", :collection => @posts %>
+
+<%= will_paginate @posts %>
 
