showing comments on post page

--- a/app/views/layouts/blogs.html.erb
+++ b/app/views/layouts/blogs.html.erb
@@ -3,6 +3,7 @@
   <title><%= yield :title %></title>
   <%= javascript_include_tag :defaults %>
   <%= stylesheet_link_tag "blogs_alt" %>
+  <%= stylesheet_link_tag "blogs_extras" %>
   <%= calendar_date_select_includes %>
   <%= stylesheet_link_tag "SyntaxHighlighter" %>
   <%= javascript_include_tag "syntax_highlighter/shCore.js" %>
