--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,5 +1,6 @@
 <div class="comment">
 <div class="comment_header">
+<span class="comment_count"><%= comment_counter %>.</span>
 Comment by 
 <span class="commenter">
 <% if comment.commenter_email -%>
