startted on the comments form

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -22,6 +22,8 @@ No comments posted.
 <%- end -%>
 </a></p>
 
+<%= render :partial => "comments/form" %>
+
 <% if @comments -%>
 <div id="comments">
 <%= render :partial => "comments/comment", :collection => @comments %>
