it's now possible to post comments. needs some cleanup, though.

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -22,7 +22,9 @@ No comments posted.
 <%- end -%>
 </a></p>
 
+<div id="comment_form">
 <%= render :partial => "comments/form" %>
+</div>
 
 <% if @comments -%>
 <div id="comments">
