--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -2,7 +2,7 @@
   @comment ||= Comment.new :post => @post
 -%>
 
-<% form_for(@comment, :url => post_comment_path(@post, @comment)) do |f| -%>
+<% remote_form_for(@comment, :url => post_comment_path(@post, @comment), :update => "comment_form") do |f| -%>
   <%= f.error_messages %>
 <p>
   <b><%= f.label :commenter_name, "Name" %></b><br/>
