added some nice visuals for comments. needs better error handling now

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,4 +1,4 @@
-<div class="comment">
+<div class="comment" id="comment_<%= comment.id %>">
 <div class="comment_header">
 <span class="comment_count"><%= comment_counter %>.</span>
 Comment by 
