--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -20,6 +20,9 @@
   <b><%= f.label :body_source, "Comment Text" %></b><br/>
   <%= f.text_area :body_source, :size => "50x8"%>  
 </p>
+
+<%= get_captcha() %>
+
 <p>
   <%= f.submit "Save" %>
 </p>
