--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -10,7 +10,7 @@
   </p>
   <p>
     <%= f.label :body %><br />
-    <%= f.text_area :body %>
+    <%= f.text_area :body, :size => "50x8" %>
   </p>
   <p>
     <%= f.label :published_at %><br />
