--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,26 +1,5 @@
 <h1>New post</h1>
 
-<% form_for(@post) do |f| %>
-  <%= f.hidden_field :blog_id %>
-  <%= f.error_messages %>
-
-  <p>
-    <%= f.label :title %><br />
-    <%= f.text_field :title %>
-  </p>
-  <p>
-    <%= f.label :body %><br />
-    <%= f.text_area :body, :size => "50x8" %>
-  </p>
-  <p>
-    <%= f.label :published_at %><br />
-    <%# = f.datetime_select :published_at %>
-    <%= calendar_date_select_tag "post[published_at]", Time.now, :embedded => true, :time => true %>
-
-  </p>
-  <p>
-    <%= f.submit "Create" %>
-  </p>
-<% end %>
+<%= render :partial => "form", :locals => {:submit_text => "Create"} %>
 
 <%= link_to 'Back', posts_path %>
