added tag list field to Post form

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -11,6 +11,10 @@
     <%= f.text_area :body, :size => "50x8", :value => (@post.content ? @post.content.source : "") %>
   </p>
   <p>
+    <%= f.label :tag_list, "Tags" %><br />
+    <%= f.text_field :tag_list %>
+  </p>
+  <p>
     <%= f.label :published_at %><br />
     <%# = f.datetime_select :published_at %>
     <%= calendar_date_select_tag "post[published_at]", Time.now, :embedded => true, :time => true %>
