--- a/app/views/blogs/_post.html.erb
+++ b/app/views/blogs/_post.html.erb
@@ -1,6 +1,12 @@
 <div class="post">
 <div class="post_title"><h1><%= link_to post.title, post_path(post) %></h1></div>
-<div class="meta">Published <%= post.published_at.strftime "%Y-%m-%d" %> by <%= post.users.map(&:display_name).to_sentence %></div>
+<div class="meta">
+Published <%= post.published_at.strftime "%Y-%m-%d" %> by <%= post.users.map(&:display_name).to_sentence %>
+<%- unless post.tags.empty? -%>
+<br/>
+Tags: <%= render :partial => "posts/tags_list", :locals => {:tags => post.tags} %>
+<%- end -%>
+</div>
 <div class="post_body storycontent">
 <%= post.body %>
 </div>
