tags are sorted in post view

--- a/app/views/blogs/_post.html.erb
+++ b/app/views/blogs/_post.html.erb
@@ -4,7 +4,7 @@
 Published <%= post.published_at.strftime "%Y-%m-%d" %> by <%= post.users.map(&:display_name).to_sentence %>
 <%- unless post.tags.empty? -%>
 <br/>
-Tags: <%= render :partial => "posts/tag", :collection => post.tags, :spacer_template => "/posts/tag_spacer", :locals => {:post => post} %>
+Tags: <%= render :partial => "posts/tag", :collection => post.tags.find(:all, :order=>"name"), :spacer_template => "/posts/tag_spacer", :locals => {:post => post} %>
 <div id="post_<%= post.id %>_taginfo" style="display:none"></div>
 <%- end -%>
 </div>
