--- a/public/stylesheets/SyntaxHighlighter.css
+++ b/public/stylesheets/SyntaxHighlighter.css
@@ -2,7 +2,8 @@
 {
 	font-family: "Consolas", "Courier New", Courier, mono, serif;
 	font-size: 12px;
-	background-color: #E7E5DC;
+	/* background-color: #E7E5DC; */
+	background-color: white;
 	width: 99%;
 	overflow: auto;
 	margin: 18px 0 18px 0 !important;
