--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,4 +1,4 @@
-<% form_for(@post) do |f| %>
+<% form_for(@post, :html => { :multipart => true }) do |f| %>
   <%= f.hidden_field :blog_id %>
   <%= f.error_messages %>
 
@@ -15,10 +15,13 @@
     <%= f.text_field :tag_list %>
   </p>
   <p>
+    <%= f.label :content_image, "Image" %><br />
+    <%= file_field_tag :content_image %>
+  </p>
+  <p>
     <%= f.label :published_at %><br />
     <%# = f.datetime_select :published_at %>
     <%= calendar_date_select_tag "post[published_at]", @post.published_at || Time.now, :embedded => true, :time => true %>
-
   </p>
   <p>
     <%= f.submit submit_text %>
