--- a/app/views/layouts/blogs.html.erb
+++ b/app/views/layouts/blogs.html.erb
@@ -47,5 +47,15 @@
 dp.SyntaxHighlighter.ClipboardSwf = '/javascript/syntax_highlighter/clipboard.swf';
 dp.SyntaxHighlighter.HighlightAll('code');
 </script>
+<!-- Google Analytics BEGIN -->
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script>
+<script type="text/javascript">
+var pageTracker = _gat._getTracker("UA-5173753-1");
+pageTracker._trackPageview();
+</script>
+<!-- Google Analytics END -->
 </html>
 
