more simple protection for user spamming

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -12,13 +12,18 @@
     <td><%=h user.username %></td>
     <td><%=h user.first_name %></td>
     <td><%=h user.last_name %></td>
+<% if logged_in? -%>
     <td><%= link_to 'Show', user %></td>
     <td><%= link_to 'Edit', edit_user_path(user) %></td>
     <td><%= link_to 'Destroy', user, :confirm => 'Are you sure?', :method => :delete %></td>
+<% end -%>
   </tr>
 <% end %>
 </table>
 
 <br />
 
+<% if logged_in? -%>
 <%= link_to 'New user', new_user_path %>
+<% end -%>
+
