added bash to syntax highlighter includes

--- a/app/views/layouts/blogs.html.erb
+++ b/app/views/layouts/blogs.html.erb
@@ -12,6 +12,7 @@
   <%= javascript_include_tag "syntax_highlighter/shBrushCss.js" %>
   <%= javascript_include_tag "syntax_highlighter/shBrushJScript.js" %>
   <%= javascript_include_tag "syntax_highlighter/shBrushJava.js" %>
+  <%= javascript_include_tag "syntax_highlighter/shBrushBash.js" %>
   <link rel="shortcut icon" href="/favicon.ico">
 <% if @blog -%>
   <%= auto_discovery_link_tag(:rss, "/feed/#{@blog.id}") %>
