--- a/app/views/sidebars/index.html.erb
+++ b/app/views/sidebars/index.html.erb
@@ -1,4 +1,5 @@
-<h1>Sidebar for <%= h@blog.name %></h1>
+<% content_for :title do %><%=h @blog.name %> - Sidebar<% end %>
+<h1>Sidebar for <%=h @blog.name %></h1>
 
 <table>
 
