tried to fix style problems on IE

--- a/app/views/layouts/blogs.html.erb
+++ b/app/views/layouts/blogs.html.erb
@@ -29,6 +29,7 @@
 </head>
 <body>
 
+<div style="margin: 0 auto 0 auto">
 <div id="contentc">
 <div id="content">
 <div id="header">
@@ -43,6 +44,7 @@
 </div><!-- mainbar -->
 </div><!-- content -->
 </div><!-- contentc -->
+</div>
 
 </body>
 <script language="javascript">
