--- a/app/views/layouts/blogs.html.erb
+++ b/app/views/layouts/blogs.html.erb
@@ -29,7 +29,7 @@
 </head>
 <body>
 
-<div style="margin: 0 auto 0 auto">
+<div style="text-align: center"> <!-- fix for IE... -->
 <div id="contentc">
 <div id="content">
 <div id="header">
