truncating comment text in sidebar

--- a/app/views/layouts/_sidebar_latest_comments.html.erb
+++ b/app/views/layouts/_sidebar_latest_comments.html.erb
@@ -1,4 +1,4 @@
 <% sidebar_component.comments.each do |comment| -%>
-<div class="sidebar_comment"><%= comment.created_at.to_date.to_formatted_s %> <%=h comment.body_cleaned %></div>
+<div class="sidebar_comment"><%= comment.created_at.to_date.to_formatted_s %> <%=h(truncate(comment.body_cleaned)) %></div>
 <% end -%>
 
